2009-05-22  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Skip tests depending on platform dependent results.

        * platform/qt/Skipped:

2009-05-22  Shinichiro Hamaji  <hamaji@google.com>

        Reviewed by Oliver Hunt.

        Remove optimization path alpha=0 case from GraphicContext(CG|Skia).
        This optimization doesn't make sense for some composite mode (e.g., 'copy' operation).

        https://bugs.webkit.org/show_bug.cgi?id=25956

        * fast/canvas/canvas-composite-alpha-expected.txt:
        * fast/canvas/canvas-composite-alpha.html:
        * platform/gtk/fast/canvas/canvas-composite-alpha-expected.txt: Removed.

2009-05-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Add tests to ensure that we correctly cache (or do not cache) lookups
        of global properties.

        * fast/js/global-function-resolve.html: Added.
        * fast/js/resources/global-function-resolve.js: Added.

2009-05-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Tests for <rdar://problem/6910832> | https://bugs.webkit.org/show_bug.cgi?id=25907
        Incorrect URL returned to the DOM while the user drags a file

        * http/tests/local/drag-over-remote-content-expected.txt: Added.
        * http/tests/local/drag-over-remote-content.html: Added.
        * http/tests/security/drag-over-remote-content-iframe-expected.txt: Added.
        * http/tests/security/drag-over-remote-content-iframe.html: Added.

2009-05-21  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Fixing test to actually use the correct names for the frames.

        * http/tests/mime/accept-all-text-types.html:

2009-05-21  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Disable 2 more tests that sometimes fail.

        * platform/gtk/Skipped:

2009-05-21  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
