@@ -1,4 +1,0 @@
-ALERT: PASS
-ALERT: PASS
-ALERT: PASS
-
