@@ -1,27 +1,0 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-  <script>
-    if (window.layoutTestController) {
-        layoutTestController.dumpAsText();
-    }
-
-    function reportSuccess(text) {
-        if (text == 'PASS\n') {
-            alert('PASS');
-        } else {
-            alert('FAIL');
-        }
-    }
-  </script>
-  <div id="result"/>
-  <frameset cols="400,*" rows="*" id="mainFrameset">
-    <frame name="frame_1" id="frame_1" src="data:text/html, Test for <a href='https://bugs.webkit.org/show_bug.cgi?id=24903' target='_top'> bug 24903</a>: ext files which have sub MIME types are treated as not displayable<br/>" />
-    <frame name="plain" id="plain" src="resources/accept-all-text-types.cgi?type=plain" onload="javascript:reportSuccess(plain.document.body.innerText)" />
-    <frame name="patch" id="patch" src="resources/accept-all-text-types.cgi?type=x-patch" onload="javascript:reportSuccess(patch.document.body.innerText)" />
-    <frame name="something" id="something" src="resources/accept-all-text-types.cgi?type=x-something-blabla" onload="javascript:reportSuccess(something.document.body.innerText)" />
-  </frameset>
-</body>
-</html>
